<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:android1="http://schemas.android.com/apk/res/android">

    <string name="app_name">Know Where</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>
    <string name="activity_credit">Credit</string>
    <string name="tutrl">HOW-TO</string>
    <string name="title_level_screen">Level Screen</string>
    <string name="activity_level_easy">Easy</string>
    <string name="activity_level_medium">Medium</string>
    <string name="activity_level_expert">Expert</string>
    <string name="level_easy_1">Easy</string>
    <string name="level_easy_2">Easy</string>
    <string name="level_easy_3">Easy</string>
    <string name="level_easy_4">Easy</string>
    <string name="level_med_1">Medium</string>
    <string name="level_med_2">Medium</string>
    <string name="level_med_3">Medium</string>
    <string name="level_med_4">Medium</string>
    <string name="level_exp_1">Expert</string>
    <string name="level_exp_2">Expert</string>
    <string name="level_exp_3">Expert</string>
    <string name="level_exp_4">Expert</string>
    <string name="level_exp_5">Expert</string>
    <string name="mbtn1">PLAY</string>
    <string name="mbtn2">ABOUT</string>
    <string name="mbtn3">CREDITS</string>
    <string name="lbtn1">EASY</string>
    <string name="lbtn2">MEDIUM</string>
    <string name="lbtn3">EXPERT</string>
    <string name="lvlchanger">Next</string>
    <string name="lvlsctxt">Select the Level</string>
    <string name="cd_lvlesy_img1">Taj Mahal</string>
    <string name="cd_lvlesy_img2">Colosseum</string>
    <string name="cd_lvlesy_img3">Effiel Tower</string>
    <string name="cd_lvlesy_img4">Sydney OperaHouse</string>
    <string name="cd_lvlmed_img1">Love Island</string>
    <string name="cd_lvlmed_img2">Great Barrier Reef</string>
    <string name="cd_lvlmed_img3">Egypt Pyramids</string>
    <string name="cd_lvlmed_img4">Namibia desert</string>
    <string name="cd_lvlexp_img1">Aluminium Ore</string>
    <string name="cd_lvlexp_img2">Angkor Wat</string>
    <string name="cd_lvlexp_img3">Earth Storm</string>
    <string name="cd_lvlexp_img4">Manam Volcano</string>
    <string name="cd_lvlexp_img5">Mississipi River</string>
    <string name="chck">CHECK</string>
    <string name="qsn1">Monument in the picture?</string>
    <string name="qsn2">What is this place?</string>
    <string name="qsn3">Where is this image taken?</string>
    <string name="qsn4">What do you see in the picture?</string>
    <string name="how_two">HOW-TO</string>
    <string name="extreme">NATURAL IMPACT</string>
    <string name="human">HUMAN IMPACT</string>
    <string name="nti1">Fire Scars</string>
    <string name="nti2">Flooding Louisiana</string>
    <string name="nti3">lake Oahe</string>
    <string name="nti4">Mount St.Helens</string>
    <string name="hmi1">Amigosta</string>
    <string name="hmi2">Lake Nakuru</string>
    <string name="hmi3">New Providence</string>
    <string name="hmi4">Lakeze Dam</string>
    <string name="nti1l">Natrual Impact</string>
    <string name="nti2l">Natrual Impact</string>
    <string name="nti3l">Natrual Impact</string>
    <string name="nti4l">Natrual Impact</string>
    <string name="hmi1l">Human Impact</string>
    <string name="hmi2l">Human Impact</string>
    <string name="hmi3l">Human Impact</string>
    <string name="hmi4l">Human Impact</string>

</resources>
