<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/lvlmedimg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/med_img_pyr"
        android:contentDescription="@string/cd_lvlmed_img3" />

    <Button
        android:id="@+id/lvlmedbtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="24dp"
        android:minWidth="99dp"
        android:text="@string/lvlchanger" />

    <EditText
        android:id="@+id/plntxt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvlmedimg3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:ems="10" 
        android:text="@string/qsn1"
        android:clickable="false"
        android:cursorVisible="false"
        android:gravity="center_horizontal"
        android:background="#00000000"
        android:inputType="text"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/multxt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkkbtn7"
        android:layout_alignRight="@+id/lvlmedbtn3"
        android:layout_below="@+id/plntxt7"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/chkkbtn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lvlmedbtn3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:minWidth="99dp"
        android:text="@string/chck" />

</RelativeLayout>
