<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    <ImageView
        android:id="@+id/lvlesyimg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/cd_lvlesy_img2"
        android:src="@drawable/esy_img_coll" />

    <Button
        android:id="@+id/lvlesybtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="23dp"
        android:minWidth="99dp"
        android:text="@string/lvlchanger" />

    <EditText
        android:id="@+id/plntxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/multxt2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:background="#00000000"
        android:clickable="false"
        android:ems="20"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:text="@string/qsn1" 
        android:focusableInTouchMode="false"
        android:focusable="false" />

    <EditText
        android:id="@+id/multxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkbtn2"
        android:layout_alignRight="@+id/lvlesybtn2"
        android:layout_centerVertical="true"
        android:contentDescription="@string/cd_lvlesy_img2"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/chkbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lvlesybtn2"
        android:layout_alignBottom="@+id/lvlesybtn2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:minWidth="99dp"
        android:text="@string/chck" />

</RelativeLayout>
