<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/lvlexpimg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:src="@drawable/exp_img_aumn" 
        android:contentDescription="@string/cd_lvlexp_img1"/>

    <EditText
        android:id="@+id/plntxt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvlexpimg1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="13"
        android:text="@string/qsn4" 
        android:cursorVisible="false"
        android:clickable="false"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"/>

    <EditText
        android:id="@+id/multxt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkbtn9"
        android:layout_alignRight="@+id/lvlexpbtn1"
        android:layout_below="@+id/plntxt9"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/chkbtn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:minWidth="99dp"
        android:text="@string/chck" />

    <Button
        android:id="@+id/lvlexpbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chkbtn9"
        android:layout_alignBottom="@+id/chkbtn9"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:minWidth="99dp"
        android:text="@string/lvlchanger" />

</RelativeLayout>
