<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/lvlesybtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="23dp"
        android:minWidth="99dp"
        android:text="@string/lvlchanger" />

    <Button
        android:id="@+id/chkbtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lvlesybtn4"
        android:layout_alignBottom="@+id/lvlesybtn4"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="31dp"
        android:minWidth="99dp"
        android:text="@string/chck" />

    <ImageView
        android:id="@+id/lvlesyimg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/cd_lvlesy_img4"
        android:src="@drawable/esy_img_soha" />

    <EditText
        android:id="@+id/multxt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkbtn4"
        android:layout_alignRight="@+id/lvlesybtn4"
        android:layout_below="@+id/plntxt4"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/plntxt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvlesyimg4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="#00000000"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="11"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:text="@string/qsn1" 
        android:focusable="false"
        android:focusableInTouchMode="false"/>
    

</RelativeLayout>
