<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/msbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:minWidth="99dp"
        android:text="@string/mbtn1" />

    <Button
        android:id="@+id/msbtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msbtn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:duplicateParentState="false"
        android:minWidth="99dp"
        android:text="@string/mbtn3" />

    <Button
        android:id="@+id/msbtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/msbtn3"
        android:layout_below="@+id/msbtn3"
        android:layout_marginTop="24dp"
        android:minWidth="99dp"
        android:text="@string/tutrl" />

</RelativeLayout>