<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/lvlesyimg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/cd_lvlmed_img2"
        android:src="@drawable/med_img_gbr" />

    <Button
        android:id="@+id/lvlmedbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="22dp"
        android:ellipsize="none"
        android:minWidth="99dp"
        android:text="@string/lvlchanger" />

    <Button
        android:id="@+id/chkbtn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lvlmedbtn2"
        android:layout_alignBottom="@+id/lvlmedbtn2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:minWidth="99dp"
        android:text="@string/chck" />

    <EditText
        android:id="@+id/plntxt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvlesyimg4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="12"
        android:inputType="text"
        android:text="@string/qsn4" 
        android:clickable="false"
        android:cursorVisible="false"
        android:gravity="center_horizontal"
        android:background="#00000000"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/multxt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkbtn6"
        android:layout_alignRight="@+id/lvlmedbtn2"
        android:layout_below="@+id/plntxt6"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textMultiLine" />

</RelativeLayout>
