<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/lvlexpimg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/exp_img_earth" 
        android:contentDescription="@string/cd_lvlexp_img3"/>

    <EditText
        android:id="@+id/multxt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkbtn11"
        android:layout_alignRight="@+id/lvlexpbtn3"
        android:layout_below="@+id/plntxt11"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/lvlexpbtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chkbtn11"
        android:layout_alignBottom="@+id/chkbtn11"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:minWidth="99dp"
        android:text="@string/lvlchanger" />

    <Button
        android:id="@+id/chkbtn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="24dp"
        android:minWidth="99dp"
        android:text="@string/chck" />

    <EditText
        android:id="@+id/plntxt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvlexpimg3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#00000000"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="12"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:text="@string/qsn4" >

        <requestFocus />
    </EditText>

</RelativeLayout>
